--- a/GDPARCM_Repository.vcxproj.filters
+++ b/GDPARCM_Repository.vcxproj.filters
@@ -27,6 +27,15 @@
     <ClCompile Include="TextureDisplay.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="GameObjectManager.cpp" />
+    <ClCompile Include="HelloWorldThread.cpp" />
+    <ClCompile Include="IconObject.cpp" />
+    <ClCompile Include="IETThread.cpp" />
+    <ClCompile Include="IExecutionEvent.cpp" />
+    <ClCompile Include="StreamAssetLoader.cpp" />
+    <ClCompile Include="StringUtils.cpp" />
+    <ClCompile Include="TextureManager.cpp" />
+    <ClCompile Include="AGameObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseRunner.h">
@@ -41,5 +50,14 @@
     <ClInclude Include="TextureDisplay.h">
       <Filter>Components</Filter>
     </ClInclude>
+    <ClInclude Include="GameObjectManager.h" />
+    <ClInclude Include="HelloWorldThread.h" />
+    <ClInclude Include="IconObject.h" />
+    <ClInclude Include="IETThread.h" />
+    <ClInclude Include="IExecutionEvent.h" />
+    <ClInclude Include="StreamAssetLoader.h" />
+    <ClInclude Include="StringUtils.h" />
+    <ClInclude Include="TextureManager.h" />
+    <ClInclude Include="AGameObject.h" />
   </ItemGroup>
 </Project>
